--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -13,10 +13,21 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="4dp"
-        android:src="@drawable/login"
+        android:src="@drawable/signup"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ProgressBar
+        android:visibility="gone"
+        android:id="@+id/progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/Email"
+        app:layout_constraintEnd_toStartOf="@+id/textView"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.814" />
 
     <TextView
         android:id="@+id/textView"
@@ -62,7 +73,7 @@
         android:ems="6"
         android:gravity="start"
         android:hint="Username"
-        android:inputType="numberPassword"
+        android:inputType="text"
         android:padding="20dp"
         android:shadowColor="@color/black"
         android:textColorHint="@color/hintColor"
@@ -82,7 +93,7 @@
         android:ems="6"
         android:gravity="start"
         android:hint="Password"
-        android:inputType="textEmailAddress"
+        android:inputType="textPassword"
         android:padding="20dp"
         android:shadowColor="@color/black"
         android:textColorHint="@color/hintColor"
@@ -101,7 +112,7 @@
         android:ems="6"
         android:gravity="start"
         android:hint="Repeat-password"
-        android:inputType="numberPassword"
+        android:inputType="textPassword"
         android:padding="20dp"
         android:shadowColor="@color/black"
         android:textColorHint="@color/hintColor"
@@ -109,12 +120,13 @@
         app:layout_constraintStart_toStartOf="@+id/Password"
         app:layout_constraintTop_toBottomOf="@+id/Password" />
 
+
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/SignUp"
         android:layout_width="160dp"
         android:layout_height="54dp"
         android:layout_marginBottom="16dp"
-        android:background="@color/bronDark"
+        android:background="@drawable/buttonshape"
         android:fontFamily="@font/aclonica"
         android:text="Sign-Up"
         android:textAllCaps="false"
@@ -125,12 +137,14 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent" />
 
+
     <androidx.appcompat.widget.AppCompatButton
-        android:background="@drawable/button2shape"
+
         android:id="@+id/Register"
         android:layout_width="160dp"
         android:layout_height="54dp"
         android:layout_marginBottom="16dp"
+        android:background="@drawable/button2shape"
         android:text="Register"
         android:fontFamily="@font/aclonica"
         android:textSize="16dp"
@@ -138,6 +152,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/button" />
+        app:layout_constraintStart_toEndOf="@+id/SignUp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
