--- a/app/src/main/res/layout/activity_login_screen.xml
+++ b/app/src/main/res/layout/activity_login_screen.xml
@@ -35,7 +35,7 @@
         android:layout_width="0dp"
         android:layout_height="64dp"
         android:layout_marginStart="30dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="92dp"
         android:layout_marginEnd="30dp"
         android:background="@drawable/edtextshape"
         android:elevation="10dp"
@@ -71,6 +71,7 @@
 
 
     <TextView
+       android:id="@+id/forgate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
@@ -81,25 +82,24 @@
         app:layout_constraintTop_toBottomOf="@+id/passwrd" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/button"
+        android:id="@+id/buttonlogin"
         android:layout_width="160dp"
         android:layout_height="54dp"
         android:layout_marginBottom="16dp"
-        android:background="@color/bronDark"
-
+        android:background="@drawable/buttonshape"
         android:fontFamily="@font/aclonica"
         android:text="Login"
         android:textAllCaps="false"
         android:textColor="@color/white"
         android:textSize="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/button2"
+        app:layout_constraintEnd_toStartOf="@+id/buttonSignup"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:background="@drawable/button2shape"
-        android:id="@+id/button2"
+        android:id="@+id/buttonSignup"
         android:layout_width="160dp"
         android:layout_height="54dp"
         android:layout_marginBottom="16dp"
@@ -110,6 +110,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/button" />
+        app:layout_constraintStart_toEndOf="@+id/buttonlogin" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
