--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -62,7 +62,7 @@
         android:ems="6"
         android:gravity="start"
         android:hint="Username"
-        android:inputType="numberPassword"
+        android:inputType="text"
         android:padding="20dp"
         android:shadowColor="@color/black"
         android:textColorHint="@color/hintColor"
@@ -82,7 +82,7 @@
         android:ems="6"
         android:gravity="start"
         android:hint="Password"
-        android:inputType="textEmailAddress"
+        android:inputType="numberPassword"
         android:padding="20dp"
         android:shadowColor="@color/black"
         android:textColorHint="@color/hintColor"
@@ -109,12 +109,13 @@
         app:layout_constraintStart_toStartOf="@+id/Password"
         app:layout_constraintTop_toBottomOf="@+id/Password" />
 
+
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/SignUp"
         android:layout_width="160dp"
         android:layout_height="54dp"
         android:layout_marginBottom="16dp"
-        android:background="@color/bronDark"
+        android:background="@drawable/buttonshape"
         android:fontFamily="@font/aclonica"
         android:text="Sign-Up"
         android:textAllCaps="false"
@@ -125,12 +126,14 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent" />
 
+
     <androidx.appcompat.widget.AppCompatButton
-        android:background="@drawable/button2shape"
+
         android:id="@+id/Register"
         android:layout_width="160dp"
         android:layout_height="54dp"
         android:layout_marginBottom="16dp"
+        android:background="@drawable/button2shape"
         android:text="Register"
         android:fontFamily="@font/aclonica"
         android:textSize="16dp"
@@ -138,6 +141,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/button" />
+        app:layout_constraintStart_toEndOf="@+id/SignUp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
