--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -13,10 +13,18 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="4dp"
-        android:src="@drawable/login"
+        android:src="@drawable/signup"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ProgressBar
+        android:id="@+id/progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/Email"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <TextView
         android:id="@+id/textView"
@@ -62,7 +70,7 @@
         android:ems="6"
         android:gravity="start"
         android:hint="Username"
-        android:inputType="numberPassword"
+        android:inputType="text"
         android:padding="20dp"
         android:shadowColor="@color/black"
         android:textColorHint="@color/hintColor"
@@ -82,7 +90,7 @@
         android:ems="6"
         android:gravity="start"
         android:hint="Password"
-        android:inputType="textEmailAddress"
+        android:inputType="numberPassword"
         android:padding="20dp"
         android:shadowColor="@color/black"
         android:textColorHint="@color/hintColor"
@@ -138,6 +146,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/button" />
+        app:layout_constraintStart_toEndOf="@+id/SignUp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
